# Auto-Deployer

./: .env.example  .gitignore  CLAUDE.md  COMPRESSION_LOGGING_IMPROVEMENT.md  COT_OPTIMIZATION_SUMMARY.md  ERROR_HANDLING_IMPROVEMENT.md  INTERACTION_MODE_GUIDE.md  PARALLEL_TESTING_IMPLEMENTATION.md  PROMPT_SIMPLIFICATION_REPORT.md  README.md  REALTIME_LOG_IMPLEMENTATION.md  STEP_EXECUTION_IMPROVEMENTS.md  pyproject.toml  pyrightconfig.json  run_deploy.ps1  run_tests.ps1  test_compression_events.py  test_fix.py  test_gemini.py  test_import.py  test_interaction_config.py  test_parallel_runner.py  test_prompt_simplification.py  test_prompts_refactor.py  test_realtime_log.py  test_sleep_timeout_fix.py
.claude/: settings.local.json
.github/: QUICKSTART.md  README.md  WORKFLOWS_USAGE.md  copilot-instructions.md  secrets.example
config/: default_config.json
docs/: ERROR_HANDLING_IMPROVEMENT.md  LLM_PROVIDERS.md  LOOP_DETECTION_IMPLEMENTATION.md  MULTI_LLM_SUPPORT.md  REFACTORING_SUMMARY.md  STEP_EXECUTION_IMPROVEMENTS.md  architecture.md  chain-of-thought-implementation.md  cli-reference.md  cot-quick-start.md  custom-input-feature.md  error-diagnosis-improvement.md  failed-case-learning-design.md  llm_repair_plan.md  local_analysis_plan.md  powershell-prompt-improvements.md  reasoning-output-feature.md  troubleshooting.md
examples/: test_custom_input.py  test_output_extractor.py
tests/: __init__.py  run_tests.py  simple_test.py  test_analyzer.py  test_compression.py  test_config.py  test_context_management.py  test_gitops.py  test_interaction.py  test_loop_skip.py  (+9 more)
(+111 files in other folders)
