[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-deployer"
version = "0.1.0"
description = "CLI agent for automated deployments"
authors = [
  { name = "ctfy66" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paramiko>=3.3",
  "requests>=2.31"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
auto-deployer = "auto_deployer.main:app_main"

[tool.setuptools.packages.find]
where = ["src"]
